--- a/src/app/components/login/login.html
+++ b/src/app/components/login/login.html
@@ -1,59 +1,84 @@
-<div class="modal-header">
-    <h3 class="modal-title neon-font orange">Jukebox Comprehension Account</h3>
-</div>
-<div class="modal-body">
 
-  <div ng-if="lc.isLoggedIn()">  <!-- LOGGED IN-->
-    <div class="form-group">
-      <h3>Hello {{lc.userInfo.email}}</h3>
-      <p>Your Account subscription will expire on 31st August 2017.</p>
+  <!-- Modal content-->
+  <div class="modal-content">
+
+    <div class="modal-header">
+      <div class="col-sm-11">
+        <h3 class="modal-title neon-font blue">Jukebox Comprehension Account</h3>
+      </div>
+      <div class="col-sm-1 text-right">
+        <a><i class="glyphicon glyphicon-remove blue" ng-click="lc.close()"></i></a>
+      </div>
     </div>
-    <br/>
-    <div class="form-group">
-      <button class="btn btn-lg btn-primary btn-lg outline neon-font" type="button" ng-click="lc.cancel()">Cancel</button>
-      <button class="btn btn-lg btn-primary btn-lg outline neon-font pull-right" type="button" ng-click="lc.logout()">logout</button>
-    </div>
-  </div>
+    <div class="modal-body">
 
-  <div ng-if="!lc.isLoggedIn()"> <!-- NOT LOGGED IN-->
-    <form name="authForm" ng-submit="authForm.$valid && lc.login(lc.user)" class="form-group" novalidate>
-        <p class="text-center"> <i class="glyphicon glyphicon-hand-down"></i><span> login to your account to get full access to the teaching material.</span></p>
-
+      <div ng-if="lc.isLoggedIn()">  <!-- LOGGED IN -->
         <div class="form-group">
-          <div class="input-group">
-            <!--Email input-->
-            <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
-            <input ng-model="lc.user.email" ng-model-options="{ updateOn: 'default blur', debounce: { default: 1000, blur: 0 } }" type="email" name="email" class="form-control" placeholder="Email address" required autofocus>
-            <!--Email error-->
-            <div ng-show="authForm.$submitted">
-                <p ng-show="authForm.email.$error.required" class="text-danger">Email required</p>
-                <p ng-show="authForm.email.$error.email" class="text-danger">Please enter a valid email.</p>
+          <h4>Hello {{lc.userInfo.email}}</h4>
+          <p>Your Account subscription will expire on 31st August 2017.</p>
+          <p>If you would like to renew your subscription please contact us:</p>
+          <p>E-mail us at: temp@temp.com</p>
+          <p>Telephone us direct at: 07724042186</p>
+        </div>
+        <br/>
+        <div class="form-group">
+          <button class="btn btn-lg btn-primary btn-lg outline neon-font blue" type="button" ng-click="lc.logout()">logout</button>
+        </div>
+      </div>
+      <hr/>
+      <div ng-if="!lc.isLoggedIn()"> <!-- 'NOT LOGGED IN' -->
+        <form name="authForm" ng-submit="authForm.$valid && lc.login(lc.user)" class="form-group" novalidate>
+            <p class="text-center"> <i class="glyphicon glyphicon-hand-down"></i><span> login to your account to get full access to the teaching material.</span></p>
+
+            <div class="form-group">
+              <div class="input-group">
+                <!--Email input-->
+                <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
+                <input ng-model="lc.user.email" ng-model-options="{ updateOn: 'default blur', debounce: { default: 1000, blur: 0 } }" type="email" name="email" class="form-control" placeholder="Email address" required autofocus>
+                <!--Email error-->
+                <div ng-show="authForm.$submitted">
+                    <p ng-show="authForm.email.$error.required" class="text-danger">Email required</p>
+                    <p ng-show="authForm.email.$error.email" class="text-danger">Please enter a valid email.</p>
+                </div>
+              </div>
             </div>
-          </div>
-        </div>
 
-        <div class="form-group">
-          <div class="input-group">
-            <!--Password input-->
-            <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-            <input ng-model="lc.user.password" type="password" name="password" class="form-control" placeholder="Password" required>
-            <!--Password error-->
-            <div ng-show="authForm.$submitted">
-                <p ng-show="authForm.password.$error.required" class="text-danger">Password required</p>
+            <div class="form-group">
+              <div class="input-group">
+                <!--Password input-->
+                <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+                <input ng-model="lc.user.password" type="password" name="password" class="form-control" placeholder="Password" required>
+                <!--Password error-->
+                <div ng-show="authForm.$submitted">
+                    <p ng-show="authForm.password.$error.required" class="text-danger">Password required</p>
+                </div>
+              </div>
             </div>
-          </div>
-        </div>
 
-        <div class="form-group">
-          <!--Server authentication error-->
-          <h1 ng-show="lc.error" class="text-danger">The Email or Password is incorrect</h1>
-        <div>
+            <div class="form-group">
+              <!--Server authentication error-->
+              <h1 ng-show="lc.error" class="text-danger">The Email or Password is incorrect</h1>
+            </div>
 
-        <div class="form-group">
-          <button class="btn btn-lg btn-primary btn-lg outline neon-font" type="button" ng-click="lc.cancel()">Cancel</button>
-          <button class="btn btn-lg btn-primary btn-lg outline neon-font pull-right" type="submit">login</button>
-        </div>
-    </form>
+            <div class="form-group">
+                <button class="btn btn-lg btn-primary btn-lg outline neon-font blue" type="submit">login</button>
+            </div>
+        </form>
+      </div> <!-- 'NOT LOGGED IN' END -->
+
+      <div>
+        <h4>Annual Membership Fee:</h4>
+
+        <p>&pound;48 per school*</p>
+
+        <p>This will gain you full access to the site and associated material for a single
+        academic year (September 1st – 31st).</p>
+
+        <p>*All subscriptions are calculated from the day of registration to August 31st.</p>
+
+        <p>By registering you agree to the Jukebox Comprehension’s  *Terms &amp; Conditions.</p>
+      </div>
+
+    </div>  <!-- Modal Body END -->
   </div>
-
 </div>
