--- a/src/app/components/menu/menu.less
+++ b/src/app/components/menu/menu.less
@@ -8,7 +8,7 @@
 }
 
 .genre-button {
-  padding-top: 40px;
+  padding-top: 30px;
 }
 
 .genre-key {
@@ -21,12 +21,20 @@
 .carousel-control .icon-prev {
   font-size: 100px !important;
   width: inherit;
+  color: @blue
 }
 
 .carousel-control.right {
   padding-right: 215px !important;
 }
 
+.carousel .carousel-indicators { visibility: hidden; }
+
 .text-intro {
-  padding-top: 50px;
+  padding-top: 25px;
+}
+
+.song-title {
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
