--- a/src/app/components/contact/contact.html
+++ b/src/app/components/contact/contact.html
@@ -1,21 +1,29 @@
 <div class="modal-header">
-    <h3 class="modal-title neon-font orange">Contact-Us</h3>
+    <div class="col-sm-11">
+      <h3 class="modal-title neon-font blue">Contact Us</h3>
+    </div>
+    <div class="col-sm-1 text-right">
+      <a><i class="glyphicon glyphicon-remove blue" ng-click="cc.close()"></i></a>
+    </div>
 </div>
 <div class="modal-body">
-  <p>Got a question you’d like to ask?
-  Something not working?
-  Have a suggestion for a song and activity that you’d like to share with us?
-  Then drop us a message and we’ll endeavour to get back to you within 48 hours.
-  E-mail us at: temp@temp.com
-  Telephone us direct at: 07724042186</p>
+
+  <h3>Got a question you’d like to ask?</h3>
+
+  <h3>Have a great lesson you’d like to share?</h3>
+
+  <h3>Something not working?</h3>
+
+  <p>Then we’d love to hear from you. Just drop us an Email at the following
+    address and we’ll try our best to resolve your issue and get back to you within 48 hours.</p>
+
+  <h3>E-mail us at: temp@temp.com</h3>
+  <h3>Telephone us direct at: 07724042186</h3>
+
   <p>
     To find out more about the value of learning English through music and
     understand how it supports and encourages learners to incorporate and build
-     upon key elements of language is construction, book on one of our training
-     courses by clicking  <a href="www.johnmurraycpd.co.uk/Metronomics" target="_blank">here.</a>s
+    upon key elements of language is construction, book on one of our training
+    courses by clicking  <a href="www.johnmurraycpd.co.uk/metronomics" target="_blank">here.</a>s
   </p>
-
-  <div class="form-group">
-    <button class="btn btn-primary btn-lg outline neon-font" type="button" ng-click="cc.close()">Close <i class="glyphicon glyphicon-remove"></i></button>
-  </div>
 </div>
