--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -1,15 +1,5 @@
-<nav class="col-sm-12 header" ng-class="nc.colour">
-  <div class="col-sm-1">
-    <a href="/"><h2 ng-class="nc.colour"><i class="glyphicon glyphicon-home"></i></h2></a>
-  </div>
-
-  <div class="col-sm-10 text-center">
-    <h1 class="neon-font">Jukebox Comprehension</h1>
-  </div>
-
-  <div class="col-sm-1">
-      <a ng-click="nc.openLoginForm()">
-        <h2 ng-class="nc.colour"><i class="glyphicon glyphicon-user"></i></h2>
-      </a>
+<nav class="col-sm-12 header blue">
+  <div class="col-sm-12 text-center">
+    <h1 class="neon-font ">Jukebox Comprehension</h1>
   </div>
 </nav>
