--- a/src/app/components/privacy/privacy.html
+++ b/src/app/components/privacy/privacy.html
@@ -1,28 +1,34 @@
 <div class="modal-header">
-    <h3 class="modal-title neon-font orange">Privacy Policy</h3>
+  <div class="col-sm-11">
+    <h3 class="modal-title neon-font blue">Privacy Policy</h3>
+  </div>
+  <div class="col-sm-1 text-right">
+    <a><i class="glyphicon glyphicon-remove blue" ng-click="pc.close()"></i></a>
+  </div>
 </div>
 <div class="modal-body">
- Jukebox Comprehension Ltd is committed to protecting your privacy online and will never share your contact information with another party. We do not store credit card details nor do we share customer financial details with any third parties.
-
-Our policy explains how we will do this.
-
-What Information do we collect?
-When you register with us, we ask you for the following pieces of information: your name, contact address (both email and geographical) and any information necessary for payments to transfer to us securely.
-
-How do we use your information?
-Your personal information may be used to verify that you are the subscriber to the Jukebox Comprehension website. 
-We also use the information we collect to help us understand more about how our web site is used, to improve our site, and to send you information about us and our products we think will be of interest to you. 
-Unless you have informed us that you do not wish to receive further information about our products, we will, from time to time, send you mail, both direct and electronically.
-
-Do we share information?
-We will never sell or arbitrarily pass on your personal information to others.
-If we believe that your use of the site is unlawful or damaging to others, we reserve the right to disclose the information we have obtained through the site about you to the extent that it is reasonably necessary in our opinion to prevent, remedy or take action in relation to such conduct.
-
-Security
-All personal and credit card information is encoded using secure sockets layer technology (SSL) before being sent over the Internet. To protect your data further, your credit card information is always stored in encrypted form in a database that is away from our website database, so it isn't connected to the Internet. Credit card transactions are issued a digital certificate, ensuring that your data can only be read by our transaction system as long as your browser shows its secure mode symbol (such as a key or closed lock).
-
-
-  <div class="form-group">
-    <button class="btn btn-primary btn-lg outline neon-font" type="button" ng-click="pc.close()">Close <i class="glyphicon glyphicon-remove"></i></button>
-  <div>
+  <div id="privacy-content" style="overflow:scroll; height:400px;">
+    <p>Jukebox Comprehension Ltd is committed to protecting your privacy online
+      and will never share your contact information with another party.
+      We do not store credit card details nor do we share customer financial
+      details with any third parties.</p>
+    <h4>What Information do we collect?</h4>
+    <p>When you register with us, we ask you for the following pieces of information:
+      your name, contact address (both email and geographical) and, when necessary,
+      any information that will allow payments to transfer to us securely.</p>
+    <h4>How do we use your information?</h4>
+    <p>Your personal information may be used to verify that you are the subscriber
+      to the Jukebox Comprehension website.  We also use the information we
+      collect to help us understand more about how our web site is used, to
+      improve our site, and to send you information about us and our products
+      we think will be of interest to you.  Unless you have informed us that you
+      do not wish to receive further information about our products, we will,
+      from time to time, send you mail, both direct and electronically.</p>
+    <h4>Do we share information?</h4>
+    <p>We will never sell or arbitrarily pass on your personal information to others.
+    If we believe that your use of the site is unlawful or damaging to others,
+    we reserve the right to disclose the information we have obtained through
+    the site about you to the extent that it is reasonably necessary in our
+    opinion to prevent, remedy or take action in relation to such conduct.</p>
+  </div>
 </div>
