--- a/src/app/index.less
+++ b/src/app/index.less
@@ -43,7 +43,7 @@ h1 {
 }
 
 h2 {
-  font-size: 30px;
+  font-size: 38px;
 }
 
 a {
@@ -122,7 +122,11 @@ footer {
   position: absolute;
   bottom: 0;
   width: 100%;
-  font-size: 8pt;
+  font-size: 10pt;
+}
+
+footer a {
+  color: dark-grey;
 }
 
 .divider {
@@ -131,8 +135,8 @@ footer {
 }
 
 .border-glow {
-  padding: 10px;
-  margin: 20px;
+  padding: 5px;
+  margin: 15px;
   border: 3px solid @orange;
   outline:none;
   border-radius: 4px;
@@ -164,7 +168,9 @@ footer {
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
-  background-image: none;
+  // background-image: url("/assets/images/button.jpg");
+  background: -webkit-linear-gradient(top,  #2c354e 0%,#576a97 100%);
+	background: -moz-linear-gradient(top,  #2c354e 0%,#576a97 100%);
   border: 1px solid transparent;
   border-radius: 4px;
   padding: 20px 16px;
@@ -182,7 +188,6 @@ footer {
   -moz-box-shadow: 0px 0px 52px;
   -webkit-box-shadow: 0px 0px 52px;
   color: @orange;
-  background-image: url("/assets/images/button-bg.jpg");
 }
 
 .btn-lg {
@@ -192,7 +197,6 @@ footer {
 }
 
 .btn.outline {
-    background: none;
     padding: 12px 22px;
 }
 
@@ -208,7 +212,7 @@ footer {
 // Modal Styling
 .modal-content {
   background-color: @background-colour;
-  border: 1px solid @orange;
+  border: 1px solid @blue;
 }
 
 .modal-footer, .modal-header  {
@@ -221,8 +225,12 @@ footer {
   border-left: 0px;
   border-right: 0px;
   border-style: solid;
-  border-color: @orange;
+  border-color: @blue;
   color: white;
+}
+
+.modal-backdrop {
+    opacity:0.8 !important;
 }
 
 .text-danger {
