update home page and contact us

--- a/src/app/components/login/login.html
+++ b/src/app/components/login/login.html
@@ -12,24 +12,24 @@
     </div>
     <div class="modal-body">
 
-      <div ng-if="lc.isLoggedIn()">  <!-- LOGGED IN -->
-        <div class="form-group">
-          <h4>Hello {{lc.userInfo.email}}</h4>
-          <p>Your Account subscription will expire on 31st August 2017.</p>
-          <p>If you would like to renew your subscription please contact us:</p>
-          <p>E-mail us at: temp@temp.com</p>
-          <p>Telephone us direct at: 07724042186</p>
-        </div>
-        <br/>
-        <div class="form-group">
-          <button class="btn btn-lg btn-primary btn-lg outline neon-font blue" type="button" ng-click="lc.logout()">logout</button>
-        </div>
-      </div>
-      <hr/>
-      <div ng-if="!lc.isLoggedIn()"> <!-- 'NOT LOGGED IN' -->
-        <form name="authForm" ng-submit="authForm.$valid && lc.login(lc.user)" class="form-group" novalidate>
-            <p class="text-center"> <i class="glyphicon glyphicon-hand-down"></i><span> login to your account to get full access to the teaching material.</span></p>
+      <div>
+        <h4 class="modal-title neon-font blue">Annual Membership Fee</h4>
 
+        <p>&pound;48 per school*</p>
+
+        <p>This will gain you full access to the site and associated material for a single
+        academic year (September 1st – August 31st).</p>
+
+        <p>*All subscriptions are calculated from the day of registration to August 31st.</p>
+
+        <p>By registering you agree to the Jukebox Comprehension’s  *Terms &amp; Conditions.</p>
+      </div>
+
+      <hr/>
+
+      <div ng-if="!lc.isLoggedIn()"> <!-- 'NOT LOGGED IN' -->
+        <h4 class="modal-title neon-font blue">Login</h4>
+        <form name="authForm" ng-submit="authForm.$valid && lc.login(lc.user)" class="form-group" novalidate>
             <div class="form-group">
               <div class="input-group">
                 <!--Email input-->
@@ -65,19 +65,6 @@
             </div>
         </form>
       </div> <!-- 'NOT LOGGED IN' END -->
-
-      <div>
-        <h4>Annual Membership Fee:</h4>
-
-        <p>&pound;48 per school*</p>
-
-        <p>This will gain you full access to the site and associated material for a single
-        academic year (September 1st – 31st).</p>
-
-        <p>*All subscriptions are calculated from the day of registration to August 31st.</p>
-
-        <p>By registering you agree to the Jukebox Comprehension’s  *Terms &amp; Conditions.</p>
-      </div>
 
     </div>  <!-- Modal Body END -->
   </div>
