--- a/src/app/components/contact/contact.html
+++ b/src/app/components/contact/contact.html
@@ -8,22 +8,13 @@
 </div>
 <div class="modal-body">
 
-  <h3>Got a question you’d like to ask?</h3>
+  <h4 class="neon-font blue">Got a question you’d like to ask?</h4>
 
-  <h3>Have a great lesson you’d like to share?</h3>
-
-  <h3>Something not working?</h3>
+  <h4 class="neon-font blue">Have a great lesson you’d like to share?</h4>
 
   <p>Then we’d love to hear from you. Just drop us an Email at the following
     address and we’ll try our best to resolve your issue and get back to you within 48 hours.</p>
 
-  <h3>E-mail us at: temp@temp.com</h3>
-  <h3>Telephone us direct at: 07724042186</h3>
-
-  <p>
-    To find out more about the value of learning English through music and
-    understand how it supports and encourages learners to incorporate and build
-    upon key elements of language is construction, book on one of our training
-    courses by clicking  <a href="www.johnmurraycpd.co.uk/metronomics" target="_blank">here.</a>s
-  </p>
+  <h4><span class="neon-font blue"> E-mail:</span> jmurrayed@yahoo.co.uk</h4>
+  <h4><span class="neon-font blue">Telephone:</span> 07724042186</h4>
 </div>
