--- a/src/app/components/contact/contact.html
+++ b/src/app/components/contact/contact.html
@@ -15,6 +15,6 @@
   <p>Then we’d love to hear from you. Just drop us an Email at the following
     address and we’ll try our best to resolve your issue and get back to you within 48 hours.</p>
 
-  <h4><span class="neon-font blue"> E-mail:</span> jmurrayed@yahoo.co.uk</h4>
+  <h4><span class="neon-font blue"> E-mail:</span>jukeboxcomprehension@gmail.com</h4>
   <h4><span class="neon-font blue">Telephone:</span> 07724042186</h4>
 </div>
