--- a/src/app/components/privacy/privacy.html
+++ b/src/app/components/privacy/privacy.html
@@ -7,16 +7,16 @@
   </div>
 </div>
 <div class="modal-body">
-  <div id="privacy-content" style="overflow:scroll; height:400px;">
+  <div id="privacy-content" style="overflow:scroll; overflow-x:hidden; height:400px;">
     <p>Jukebox Comprehension Ltd is committed to protecting your privacy online
       and will never share your contact information with another party.
       We do not store credit card details nor do we share customer financial
       details with any third parties.</p>
-    <h4>What Information do we collect?</h4>
+    <h4 class="neon-font blue">What Information do we collect?</h4>
     <p>When you register with us, we ask you for the following pieces of information:
       your name, contact address (both email and geographical) and, when necessary,
       any information that will allow payments to transfer to us securely.</p>
-    <h4>How do we use your information?</h4>
+    <h4 class="neon-font blue">How do we use your information?</h4>
     <p>Your personal information may be used to verify that you are the subscriber
       to the Jukebox Comprehension website.  We also use the information we
       collect to help us understand more about how our web site is used, to
@@ -24,7 +24,7 @@
       we think will be of interest to you.  Unless you have informed us that you
       do not wish to receive further information about our products, we will,
       from time to time, send you mail, both direct and electronically.</p>
-    <h4>Do we share information?</h4>
+    <h4 class="neon-font blue">Do we share information?</h4>
     <p>We will never sell or arbitrarily pass on your personal information to others.
     If we believe that your use of the site is unlawful or damaging to others,
     we reserve the right to disclose the information we have obtained through
