minor tweaks and hashbang bug

--- a/src/app/components/contact/contact.html
+++ b/src/app/components/contact/contact.html
@@ -12,9 +12,8 @@
 
   <h4 class="neon-font blue">Have a great lesson you’d like to share?</h4>
 
-  <p>Then we’d love to hear from you. Just drop us an Email at the following
-    address and we’ll try our best to resolve your issue and get back to you within 48 hours.</p>
+  <p>Then we’d love to hear from you. Just get in touch and we’ll get back to you as soon as we can.</p>
 
-  <h4><span class="neon-font blue"> E-mail:</span>jukeboxcomprehension@gmail.com</h4>
+  <h4><span class="neon-font blue">E-mail:</span> jukeboxcomprehension@gmail.com</h4>
   <h4><span class="neon-font blue">Telephone:</span> 07724042186</h4>
 </div>
