--- a/src/app/components/detail/detail.html
+++ b/src/app/components/detail/detail.html
@@ -5,13 +5,13 @@
   </div>
 
   <div class="song-text spacer-3x blue">
-    <h3 class="neon-font">Task:</h3>
+    <h3 class="neon-font">Theme :</h3>
     <h4>{{detail.selectedSong.description}}</h4>
   </div>
 
   <div class="text-center spacer-5x">
     <a class="btn btn-primary btn-lg outline neon-font blue"
-        href="/">
+        href="index.html#!/">
         <i class="glyphicon glyphicon-home"></i>
         Home
     </a>
@@ -20,7 +20,7 @@
 
 <div class="col-sm-6">
   <div class="detail-youtube border-glow spacer-3x" ng-class="detail.selectedSong.colour">
-    <video width="100%" height="100%" controls  poster="{{detail.selectedSong.image}}">
+    <video width="100%" height="100%" controls>
       <source ng-src="{{detail.selectedSong.lyricVideo}}" type="video/mp4">
     Your browser does not support the video tag. Please use a more modern browser.
     </video>
@@ -34,7 +34,7 @@
         target="_blank"
         href="https://firebasestorage.googleapis.com/v0/b/jukebox-temp.appspot.com/o/tasks.pdf?alt=media&token=84a14a0c-cad4-497e-962b-1334225e2939">
         <i class="glyphicon glyphicon-hand-right"></i>
-        Task
+        Theme
     </a>
   </div>
 
