updates and tweaks

--- a/src/app/components/detail/detail.html
+++ b/src/app/components/detail/detail.html
@@ -34,7 +34,7 @@
         target="_blank"
         href="https://firebasestorage.googleapis.com/v0/b/jukebox-temp.appspot.com/o/tasks.pdf?alt=media&token=84a14a0c-cad4-497e-962b-1334225e2939">
         <i class="glyphicon glyphicon-hand-right"></i>
-        Theme
+        Task
     </a>
   </div>
 
