--- a/src/app/index.less
+++ b/src/app/index.less
@@ -24,7 +24,7 @@
 @red: #F60109;
 @pink: #FF00AA;
 @green: #00FF00;
-@white: #bababa; 
+@white: #bababa;
 
 @background-colour: black;
 
@@ -133,6 +133,10 @@ footer {
 
 footer a {
   color: dark-grey;
+}
+
+.twitter {
+  margin-right: 140px;
 }
 
 .divider {
