--- a/src/app/components/login/login.html
+++ b/src/app/components/login/login.html
@@ -15,14 +15,17 @@
       <div>
         <h4 class="modal-title neon-font blue">Annual Membership Fee</h4>
 
-        <p>&pound;48 per school*</p>
+        <p>&pound;48 per school</p>
 
         <p>This will gain you full access to the site and associated material for a single
         academic year (September 1st – August 31st).</p>
 
-        <p>*All subscriptions are calculated from the day of registration to August 31st.</p>
+        <p>All subscriptions are calculated from the day of registration to August 31st.</p>
 
-        <p>By registering you agree to the Jukebox Comprehension’s  *Terms &amp; Conditions.</p>
+        <p>By registering you agree to the Jukebox Comprehension’s  Terms &amp; Conditions.</p>
+        
+        <h4><span class="neon-font blue">E-mail:</span> jukeboxcomprehension@gmail.com</h4>
+        <h4><span class="neon-font blue">Telephone:</span> 07724042186</h4>
       </div>
 
       <hr/>
