add new content

--- a/src/app/components/detail/detail.html
+++ b/src/app/components/detail/detail.html
@@ -19,8 +19,8 @@
 </div>
 
 <div class="col-sm-6">
-  <div class="detail-youtube border-glow spacer-3x" ng-class="detail.selectedSong.colour">
-    <video width="100%" height="100%" controls>
+  <div class="detail-youtube border-glow spacer-3x text-center" ng-class="detail.selectedSong.colour">
+    <video width="480" height="360" controls>
       <source ng-src="{{detail.selectedSong.lyricVideo}}" type="video/mp4">
     Your browser does not support the video tag. Please use a more modern browser.
     </video>
