tweaks and updates

--- a/src/app/components/login/login.html
+++ b/src/app/components/login/login.html
@@ -22,8 +22,8 @@
 
         <p>All subscriptions are calculated from the day of registration to August 31st.</p>
 
-        <p>By registering you agree to the Jukebox Comprehension’s  Terms &amp; Conditions.</p>
-        
+        <p>By registering you agree to Jukebox Comprehension’s Terms &amp; Conditions.</p>
+
         <h4><span class="neon-font blue">E-mail:</span> jukeboxcomprehension@gmail.com</h4>
         <h4><span class="neon-font blue">Telephone:</span> 07724042186</h4>
       </div>
