--- a/src/app/components/terms/terms.html
+++ b/src/app/components/terms/terms.html
@@ -56,12 +56,14 @@
     In no event shall Jukebox Comprehension Ltd, its employees or agents be liable for any direct, indirect or consequential damages resulting from the use of this web site. This exclusion and limitation only applies to the extent permitted by law and is without prejudice to any express provisions to the contrary in any written licence or subscription agreement from Jukebox Comprehension Ltd in respect of the use of any online service provided via this web site.
     </p>
     <h3 class="neon-font blue">Business Details:</h3>
-    <p> If you need to contact us directly then you can use either the Contact
-      Us page or write to us at the following address: </p>
+    <p> If you need to contact us directly then please either the email, call or write to us at the following address: </p>
+    <h4><span class="neon-font blue">Post:</span> </h4>
     <p>Jukebox Comprehension Ltd </p>
     <p>74 Manchester Street </p>
     <p>Manchester</p>
     <p>Heywood </p>
     <p>Ol10 1DL</p>
+    <h4><span class="neon-font blue">E-mail:</span> jukeboxcomprehension@gmail.com</h4>
+    <h4><span class="neon-font blue">Telephone:</span> 07724042186</h4>
   </div>
 </div>
