--- a/src/app/components/detail/detail.html
+++ b/src/app/components/detail/detail.html
@@ -1,12 +1,7 @@
 <div class="col-sm-3">
-  <div class="song-text spacer-3x blue neon-font">
-    <h3 class="text-wrap">{{detail.selectedSong.artist}}</h3>
-    <h3 class="text-wrap">{{detail.selectedSong.title}}</h3>
-  </div>
-
-  <div class="song-text spacer-3x blue">
-    <h3 class="neon-font">Theme :</h3>
-    <h4>{{detail.selectedSong.description}}</h4>
+  <div class="song-text spacer-5x blue neon-font">
+    <h2 class="text-wrap">{{detail.selectedSong.artist}}</h2>
+    <h2 class="text-wrap">{{detail.selectedSong.title}}</h2>
   </div>
 
   <div class="text-center spacer-5x">
@@ -20,7 +15,7 @@
 
 <div class="col-sm-6">
   <div class="detail-youtube border-glow spacer-3x text-center" ng-class="detail.selectedSong.colour">
-    <video width="480" height="360" controls>
+    <video width="100%" height="100%" controls>
       <source ng-src="{{detail.selectedSong.lyricVideo}}" type="video/mp4">
     Your browser does not support the video tag. Please use a more modern browser.
     </video>
@@ -50,7 +45,7 @@
     <a class="btn btn-primary btn-lg outline neon-font detail-btn"
         ng-class="detail.selectedSong.colour">
         <i class="glyphicon glyphicon-film"></i>
-        Lyric Video
+        Music Video
     </a>
   </div>
 
@@ -58,7 +53,8 @@
     <a class="btn btn-primary btn-lg outline neon-font detail-btn"
         ng-class="detail.selectedSong.colour">
         <i class="glyphicon glyphicon-film"></i>
-        Music Video
+        Lyric Video
     </a>
   </div>
+
 </div>
