--- a/src/app/index.less
+++ b/src/app/index.less
@@ -10,19 +10,12 @@
  *  The list of variables are listed here bower_components/bootstrap/less/variables.less
  */
 @navbar-inverse-link-color: #5AADBB;
-@icon-font-path: '/fonts/';
+@icon-font-path: '/styles/fonts/';
 
 @font-face {
     font-family: Clip;
     src: url(/assets/fonts/clip.regular.ttf);
 }
-
-@font-face {
-  font-family: 'videogular' !important;
-  src: url("/assets/fonts/videogular.eot") !important;
-  src: url("/assets/fonts/videogular.eot?#iefix") format("embedded-opentype"), url("/assets/fonts/videogular.woff") format("woff"), url("/assets/fonts/videogular.ttf") format("truetype"), url("/assets/fonts/videogular.svg#videogular") format("svg") !important;
-  font-weight: normal;
-  font-style: normal; }
 
 // Define Colour variables.
 @orange: #fc7c00;
@@ -202,7 +195,7 @@ footer a {
   -moz-border-radius: 4px;
   -webkit-border-radius: 4px;
   /* create a BIG glow */
-  box-shadow: 0px 0px 522px;
+  box-shadow: 0px 0px 52px;
   -moz-box-shadow: 0px 0px 52px;
   -webkit-box-shadow: 0px 0px 52px;
   color: @orange;
