--- a/src/app/components/detail/detail.html
+++ b/src/app/components/detail/detail.html
@@ -1,11 +1,10 @@
 <div class="col-xs-12 col-sm-3">
-  <div class="spacer-4x hidden-xs">&nbsp;</div>
-  <div class="spacer visible-xs">&nbsp;</div>
+  <div class="spacer">&nbsp;</div>
   <div class="col-xs-12 col-sm-12 song-text blue neon-font">
     <h2 class="text-wrap">{{detail.selectedSong.artist}}</h2>
     <h2 class="text-wrap">{{detail.selectedSong.title}}</h2>
   </div>
-  <div class="spacer-5x col-sm-12 hidden-xs">&nbsp;</div>
+  <div class="spacer-2x col-sm-12 hidden-xs">&nbsp;</div>
   <div class="col-xs-12 col-sm-12">
     <div class="text-center col-xs-6 col-sm-12">
       <a class="btn btn-primary btn-lg outline neon-font blue"
@@ -33,7 +32,7 @@
 </div>
 
 <div class="col-xs-12 col-sm-6">
-  <div class="spacer-2x hidden-xs">&nbsp;</div>
+  <div class="spacer hidden-xs">&nbsp;</div>
   <div class="detail-youtube border-glow text-center" ng-class="detail.selectedSong.colour">
     <videogular class="videogular-container">
     			<vg-media vg-src="detail.selectedSong.lyricVideo"></vg-media>
@@ -64,8 +63,7 @@
 </div>
 
 <div class="col-xs-12 col-sm-3">
-  <div class="spacer-2x hidden-xs">&nbsp;</div>
-  <div class="spacer visible-xs">&nbsp;</div>
+  <div class="spacer">&nbsp;</div>
   <div class="text-center detail-btn" >
     <a class="btn btn-primary btn-lg outline neon-font detail-btn" ng-if="detail.isLoggedIn()"
         ng-class="detail.selectedSong.colour"
